# cpp-cross-platform

./: CMakeLists.txt
CMakeHelloWorld/: CMakeHelloWorld.cpp  CMakeHelloWorld.h  CMakeLists.txt  Car.cpp  Car.h  Enginetype.h  Person.cpp  Person.h  Vehicle.cpp  Vehicle.h
